# monty-hall-sim

./: .gitignore  CMakeLists.txt  Makefile  README.md
.direnv/: nix-profile-25.11-03d4shy8nbqgsrq7.rc
src/: main.c
